	PR target/42321 	* arm.c (arm_output_epilogue): Correctly match VFP pop instructions 	with their corresponding prologue pushes.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@157609 138bc75d-0d04-0410-961f-82ee72b054a4